BPER/DEVF/force-app/main/default/objects/ConfigurazioneSpostamenti__mdt/ConfigurazioneSpostamenti__mdt.object-meta.xml
<CustomObject>
    <label>Configurazione Spostamenti</label>
    <pluralLabel>Configurazione Spostamenti</pluralLabel>
</CustomObject>