BPER/DEVF/force-app/main/default/objects/ConfigurazioneSpostamenti__mdt/fields/Check_SegComp__c.field-meta.xml
<CustomField>
    <fullName>Check_SegComp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo aggiunto per TOM</description>
    <label>Check SegComp</label>
    <type>Checkbox</type>
</CustomField>