BPER/DEVF/force-app/main/default/objects/ConfigurazioneSpostamenti__mdt/fields/Finestra_Temporale__c.field-meta.xml
<CustomField>
    <fullName>Finestra_Temporale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finestra Temporale</label>
    <type>Checkbox</type>
</CustomField>