BPER/DEVF/force-app/main/default/objects/ConfigurazioneSpostamenti__mdt/fields/Iter_Approvativo__c.field-meta.xml
<CustomField>
    <fullName>Iter_Approvativo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Iter Approvativo</label>
    <type>Checkbox</type>
</CustomField>