BPER/DEVF/force-app/main/default/objects/ConfigurazioneSpostamenti__mdt/fields/PTF_Abi__c.field-meta.xml
<CustomField>
    <fullName>PTF_Abi__c</fullName>
    <label>Banca Permessa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>