BPER/DEVF/force-app/main/default/objects/ConfigurazioneSpostamenti__mdt/fields/PTF_CheckCedSpecifico__c.field-meta.xml
<CustomField>
    <fullName>PTF_CheckCedSpecifico__c</fullName>
    <label>Check Ced Specifico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>