BPER/DEVF/force-app/main/default/objects/ConfigurazioneSpostamenti__mdt/fields/PTF_CheckNaturaGiuridica__c.field-meta.xml
<CustomField>
    <fullName>PTF_CheckNaturaGiuridica__c</fullName>
    <label>Check Natura Giuridica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>