BPER/DEVF/force-app/main/default/objects/ConfigurazioneSpostamenti__mdt/fields/PTF_CheckTipologiaFilialeDestinazione__c.field-meta.xml
<CustomField>
    <fullName>PTF_CheckTipologiaFilialeDestinazione__c</fullName>
    <label>Check Tipologia Filiale di Destinazione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>