BPER/DEVF/force-app/main/default/objects/ConfigurazioneSpostamenti__mdt/fields/PTF_CheckTipologiaFilialePartenza__c.field-meta.xml
<CustomField>
    <fullName>PTF_CheckTipologiaFilialePartenza__c</fullName>
    <label>Check Tipologia Filiale di Partenza</label>
    <length>255</length>
    <type>Text</type>
</CustomField>