BPER/DEVF/force-app/main/default/objects/ConfigurazioneSpostamenti__mdt/fields/PTF_Filiale_End__c.field-meta.xml
<CustomField>
    <fullName>PTF_Filiale_End__c</fullName>
    <label>Filiale End</label>
    <length>255</length>
    <type>Text</type>
</CustomField>