BPER/DEVF/force-app/main/default/objects/ConfigurazioneSpostamenti__mdt/fields/PTF_Filiale_Start__c.field-meta.xml
<CustomField>
    <fullName>PTF_Filiale_Start__c</fullName>
    <label>Filiale Start</label>
    <length>255</length>
    <type>Text</type>
</CustomField>