BPER/DEVF/force-app/main/default/objects/ConfigurazioneSpostamenti__mdt/fields/PTF_Filiale_StessaArea__c.field-meta.xml
<CustomField>
    <fullName>PTF_Filiale_StessaArea__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filiale StessaArea</label>
    <type>Checkbox</type>
</CustomField>