BPER/DEVF/force-app/main/default/objects/ConfigurazioneSpostamenti__mdt/fields/PTF_Filiale_StessoMicroMercato__c.field-meta.xml
<CustomField>
    <fullName>PTF_Filiale_StessoMicroMercato__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filiale StessoMicroMercato</label>
    <type>Checkbox</type>
</CustomField>