BPER/DEVF/force-app/main/default/objects/ConfigurazioneSpostamenti__mdt/fields/PTF_JSON_Approvatori__c.field-meta.xml
<CustomField>
    <fullName>PTF_JSON_Approvatori__c</fullName>
    <label>JSON Approvatori</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>