BPER/DEVF/force-app/main/default/objects/ConfigurazioneSpostamenti__mdt/fields/PTF_MDS_Code__c.field-meta.xml
<CustomField>
    <fullName>PTF_MDS_Code__c</fullName>
    <label>MDS Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>