BPER/DEVF/force-app/main/default/objects/ConfigurazioneSpostamenti__mdt/fields/PTF_MDS_Start__c.field-meta.xml
<CustomField>
    <fullName>PTF_MDS_Start__c</fullName>
    <label>MDS Start</label>
    <length>255</length>
    <type>Text</type>
</CustomField>