BPER/DEVF/force-app/main/default/objects/ConfigurazioneSpostamenti__mdt/fields/PTF_NatureGiuridiche_Consentite__c.field-meta.xml
<CustomField>
    <fullName>PTF_NatureGiuridiche_Consentite__c</fullName>
    <label>NatureGiuridiche Consentite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>