BPER/DEVF/force-app/main/default/objects/ConfigurazioneSpostamenti__mdt/fields/PTF_StessoReferente__c.field-meta.xml
<CustomField>
    <fullName>PTF_StessoReferente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stesso Referente</label>
    <type>Checkbox</type>
</CustomField>