BPER/DEVF/force-app/main/default/objects/ConfigurazioneSpostamenti__mdt/fields/PTF_SuperUsers__c.field-meta.xml
<CustomField>
    <fullName>PTF_SuperUsers__c</fullName>
    <label>Super Users</label>
    <length>255</length>
    <type>Text</type>
</CustomField>