BPER/DEVF/force-app/main/default/objects/ConfigurazioneSpostamenti__mdt/fields/Tipo_di_Spostamento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_di_Spostamento__c</fullName>
    <label>Tipo di Spostamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MDS</fullName>
                <default>true</default>
                <label>MDS</label>
            </value>
            <value>
                <fullName>Filiale</fullName>
            </value>
            <value>
                <fullName>MDS / Filiale</fullName>
            </value>
            <value>
                <fullName>Referenti</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>