BPER/DEVF/force-app/main/default/objects/ConfigurazioneSpostamenti__mdt/fields/Tipo_IterApprovativo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_IterApprovativo__c</fullName>
    <label>Tipo di Iter Approvativo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUT</fullName>
                <default>true</default>
                <label>AUT</label>
            </value>
            <value>
                <fullName>PA</fullName>
            </value>
            <value>
                <fullName>SP</fullName>
            </value>
            <value>
                <fullName>CP</fullName>
            </value>
            <value>
                <fullName>UP</fullName>
            </value>
            <value>
                <fullName>DO</fullName>
            </value>
            <value>
                <fullName>BPI</fullName>
            </value>
            <value>
                <fullName>BFG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>